--- a/style.css
+++ b/style.css
@@ -516,7 +516,7 @@ h4 {
 .slider {
   max-width: 100rem;
   background-color: #fff;
-  height: 60rem;
+  height: 40rem;
   margin: 0 auto;
   position: relative;
 
@@ -642,13 +642,27 @@ h4 {
   font-size: 2.25rem;
   font-weight: 600;
   margin-bottom: 1.5rem;
+  overflow: hidden;
   text-align: left;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .testimonial__text {
   font-size: 1.6rem;
   margin-bottom: 1.5rem;
   color: #666;
+  width: 100%;
+  font-size: 1.4rem;
+  margin: 0;
+  text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .testimonial__author {
@@ -692,6 +706,7 @@ h4 {
 .testimonial__details {
   font-size: 1.6rem;
   display: flex;
+  text-wrap: nowrap;
   width: 100%;
 
   margin-bottom: 4rem;
@@ -987,4 +1002,63 @@ p > h1 .btn-close__icon {
 
 textarea {
   border: 1px solid #ddd;
+}
+
+.lds-ellipsis {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: var(--color-primary-opacity);
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
+}
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
+}
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
